examples/12-factor-app-v2/k8s/k3s/efk/fluent-bit-only/kibana-ingress.yaml
---
# HTTPS Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    # HTTPS as entry point
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # Enable TLS
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - secretName: kibana-tls
  rules:
    - host: kibana.cno-user-<ENV-USER-ID>-01.<ENV-ANIMAL>.commandemy.training
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elastic-kb-http
                port:
                  number: 5601
---
# http ingress for http->https redirection
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kibana-redirect
  namespace: logging
  annotations:
    # Use redirect Midleware configured
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
    # HTTP as entrypoint
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kibana.cno-user-<ENV-USER-ID>-01.<ENV-ANIMAL>.commandemy.training
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elastic-kb-http
                port:
                  number: 5601
